solve level 1 and 2

--- a/mini-project.ipynb
+++ b/mini-project.ipynb
@@ -144,6 +144,7 @@
     "### Constraints (Project Scope)\n",
     "To keep the mini project tractable, we enforce the following constraints:\n",
     "\n",
+    "- Objectives are restricted to two types: `exit_objective_fn` and `default_objective_fn`.\n",
     "- All object movements are deterministic and move at most one tile per step.\n",
     "- The agent moves one tile per step, except under the speed (Boots) power‑up, which doubles movement to two tiles per step.\n",
     "- Each entity type has a fixed, known cost, damage, or reward (cost = –reward) where applicable:\n",
@@ -282,80 +283,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "c63a5bc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Asset root for rendering. You can change this if you want to use custom game assets.\n",
+    "ASSET_ROOT = \"data/assets/\"\n",
+    "\n",
+    "# Unified imports for Grid Universe tutorial (run this cell first)\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "# Core API\n",
+    "from grid_universe.levels.grid import Level\n",
+    "from grid_universe.state import State\n",
+    "from grid_universe.levels.convert import to_state, from_state\n",
+    "from grid_universe.actions import Action\n",
+    "from grid_universe.step import step\n",
+    "\n",
+    "# Factories\n",
+    "from grid_universe.levels.factories import (\n",
+    "    create_floor, create_agent, create_box, create_coin, create_exit, create_wall,\n",
+    "    create_key, create_door, create_portal, create_core, create_hazard, create_monster,\n",
+    "    create_phasing_effect, create_speed_effect, create_immunity_effect,\n",
+    ")\n",
+    "\n",
+    "# Movement and objectives\n",
+    "from grid_universe.moves import default_move_fn\n",
+    "from grid_universe.objectives import (\n",
+    "    exit_objective_fn, default_objective_fn, all_pushable_at_exit_objective_fn, all_unlocked_objective_fn,\n",
+    ")\n",
+    "\n",
+    "# Components and enums\n",
+    "from grid_universe.components.properties import Moving\n",
+    "from grid_universe.components.properties.moving import MovingAxis\n",
+    "from grid_universe.components.properties.appearance import AppearanceName\n",
+    "from grid_universe.components.properties.pathfinding import PathfindingType\n",
+    "\n",
+    "# Rendering and display\n",
+    "from grid_universe.renderer.texture import TextureRenderer\n",
+    "from IPython.display import display\n",
+    "from grid_universe.levels.factories import create_wall\n",
+    "\n",
+    "# Default renderer used throughout the notebook unless overridden in a cell\n",
+    "renderer = TextureRenderer(resolution=240, asset_root=ASSET_ROOT)\n",
+    "renderer_large = TextureRenderer(resolution=480, asset_root=ASSET_ROOT)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "a246b570",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from grid_universe.gym_env import Observation, Action\n",
-    "from grid_universe.levels.grid import Level\n",
+    "from queue import PriorityQueue\n",
+    "import random, time\n",
     "\n",
-    "import random\n",
+    "class Node:\n",
+    "    state: State \n",
+    "    parent_node: \"Node | None\"\n",
+    "    parent_action: Action | None\n",
+    "    current_step: int\n",
+    "   \n",
+    "    def __init__(self, state: State, parent_node: \"Node | None\", parent_action: Action | None, current_step: int):\n",
+    "        self.current_step = current_step\n",
+    "        self.state = state\n",
+    "        self.parent_node = parent_node\n",
+    "        self.parent_action = parent_action\n",
+    "        \n",
+    "    def __lt__(self, other: \"Node\"):\n",
+    "        return self.heuristic() < other.heuristic()\n",
+    "        \n",
+    "    def __eq__(self, value: object) -> bool:\n",
+    "        if type(value) is not Node:\n",
+    "            return False\n",
+    "        \n",
+    "        return self.state == value.state  \n",
+    "    \n",
+    "    def manhatan_dis(self, pos_1: tuple[int, int], pos_2: tuple[int, int]):\n",
+    "        return abs(pos_1[0] - pos_2[0]) + abs(pos_1[1] - pos_2[1])\n",
+    "    \n",
+    "    def heuristic(self):\n",
+    "        return self.manhatan_dis(self.get_agent_pos(), self.get_exit_position()) - self.state.score\n",
+    "    \n",
+    "    def get_agent_pos(self) -> tuple[int, int]:\n",
+    "        position = self.state.position.get(next(iter(self.state.agent.keys())))\n",
+    "        \n",
+    "        if position is None:\n",
+    "            raise RuntimeError(\"Cannot find agent's position\")\n",
+    "        \n",
+    "        return (position.x, position.y)\n",
+    "    \n",
+    "    def get_exit_position(self) -> tuple[int, int]:\n",
+    "        position = self.state.position.get(next(iter(self.state.exit.keys())))\n",
+    "        \n",
+    "        if position is None:\n",
+    "            raise RuntimeError(\"Cannot find agent's position\")\n",
+    "        \n",
+    "        return (position.x, position.y)       \n",
+    "    \n",
+    "    def step(self, action: Action) -> State:\n",
+    "        agent_id = next(iter(self.state.agent.keys()))\n",
+    "        return step(self.state, action, agent_id)\n",
+    "     \n",
+    "    def __hash__(self) -> int:\n",
+    "        return hash((self.state.position))\n",
     "\n",
+    "MOVE_ACTIONS = [Action.UP, Action.DOWN, Action.LEFT, Action.RIGHT, Action.PICK_UP]\n",
     "\n",
     "class Agent:\n",
-    "    \"\"\"Grid Universe agent template.\n",
-    "\n",
-    "    This class is the single public interface that Coursemology will import and\n",
-    "    interact with when evaluating your submission. You should extend the\n",
-    "    internals (add helper classes / functions in other files if you wish) but\n",
-    "    MUST preserve:\n",
-    "\n",
-    "    1. The class name: Agent\n",
-    "    2. The public method: step(self, state: Level | Observation) -> Action\n",
-    "\n",
-    "    High‑level lifecycle per environment tick:\n",
-    "        state  --->  step(...)  --->  Action\n",
-    "\n",
-    "    The \"state\" object type depends on the task:\n",
-    "    - Task 1 & 2: a fully structured Level instance.\n",
-    "    - Task 3 & 4: a Observation dictionary whose primary observation is an RGBA image\n",
-    "      plus limited structured metadata in the 'info' sub‑dict. In this case you\n",
-    "      typically perform perception to build (or approximate) an internal\n",
-    "      structured representation before planning.\n",
-    "\n",
-    "    Performance constraints:\n",
-    "    - Keep per‑step latency small (single CPU, ~1GB RAM). Avoid O(W*H) scans of\n",
-    "      the full grid every step.\n",
-    "    - Determinism helps reproducibility; seed your own RNG if you add any\n",
-    "      stochastic components.\n",
-    "\n",
-    "    You may add __init__ parameters (with defaults) if needed for your own\n",
-    "    development, but the grader will instantiate Agent() with no arguments.\n",
-    "    \"\"\"\n",
-    "\n",
     "    def __init__(self):\n",
-    "        \"\"\"Initialize your agent.\n",
-    "\n",
-    "        Put all one‑time setup here (e.g., loading a decoded cipher mapping,\n",
-    "        hardcoded ML model weights, precomputing heuristic tables). Keep it fast\n",
-    "        and memory‑light to respect platform limits.\n",
-    "        \"\"\"\n",
-    "        # Placeholder for any future initialization logic\n",
-    "        pass\n",
+    "        self.distance: dict[Node, int] = {}\n",
+    "        self.good_action: dict[Node, Action | None] = {}\n",
+    "        self.step_limit: int = 0\n",
+    "        \n",
+    "    def get_exit_position(self, state: State) -> tuple[int, int]:\n",
+    "        exit_id = next(iter(state.exit.keys()))\n",
+    "        position = state.position.get(exit_id)\n",
+    "        if position is not None:\n",
+    "            return (position.x, position.y)\n",
+    "        \n",
+    "        raise Exception(\"Cannot find exit position\")\n",
     "    \n",
+    "    def get_agent_position(self, state: State) -> tuple[int, int]:\n",
+    "        agent_id = next(iter(state.agent.keys()))\n",
+    "        position = state.position.get(agent_id)\n",
+    "        if position is not None:\n",
+    "            return (position.x, position.y)\n",
+    "        \n",
+    "        raise Exception(\"Cannot find exit position\")\n",
+    "        \n",
+    "    def is_end_node(self, node: Node) -> bool:\n",
+    "        return node.get_agent_pos() == node.get_exit_position() or node.current_step >= self.step_limit\n",
+    "   \n",
+    "    def astar(self, state: State):\n",
+    "        pq: PriorityQueue[Node] = PriorityQueue()\n",
+    "        vis: dict[Node, bool] = {}\n",
+    "        \n",
+    "        initial_node = Node(state, None, None, 0)\n",
+    "        pq.put(initial_node)\n",
+    "        \n",
+    "        end_nodes: List[Node] = []\n",
+    "        while not pq.empty():\n",
+    "            node = pq.get()\n",
+    "            \n",
+    "            if node in vis:\n",
+    "                continue\n",
+    "            \n",
+    "            vis[node] = True\n",
+    "            if self.is_end_node(node):\n",
+    "                end_nodes.append(node)\n",
+    "                continue\n",
+    "            \n",
+    "            for action in MOVE_ACTIONS:\n",
+    "                new_state = node.step(action)\n",
+    "                new_node = Node(new_state, node, action, node.current_step + 1)\n",
     "\n",
-    "    def step(self, state: Level | Observation) -> Action:\n",
-    "        \"\"\"Return the next action given the current environment state.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        state : Level | Observation\n",
-    "            - If a Level instance (Tasks 1 & 2): you have direct, structured\n",
-    "              access to grid, entities, objective message, score, etc.\n",
-    "            - If a Observation dict (Task 3 and Capstone): contains 'image' (H×W×4 RGBA uint8)\n",
-    "              plus 'info' sub‑dictionary (agent stats, partial config, message).\n",
-    "              You likely need to parse the image into an internal representation.\n",
-    "\n",
-    "        Returns\n",
-    "        -------\n",
-    "        Action\n",
-    "            A valid action from the Action enum. Must always return a member;\n",
-    "            never return None. If your planner cannot produce an action in time,\n",
-    "            prefer a safe fallback (often Action.WAIT) while you recover.\n",
-    "        \"\"\"\n",
-    "        # PLaceholder: agent that chooses a random valid action each step\n",
-    "        return random.choice(list(Action))\n"
+    "                pq.put(new_node)\n",
+    "                \n",
+    "        return self.find_base_action(end_nodes)\n",
+    "                \n",
+    "    def find_base_action(self, end_nodes: List[Node]) -> Action:\n",
+    "        if len(end_nodes) == 0:\n",
+    "            random.seed(time.time_ns())\n",
+    "            return random.choice(MOVE_ACTIONS)\n",
+    "    \n",
+    "        best = min(end_nodes)\n",
+    "        lst_action: None | Action = None\n",
+    "        \n",
+    "        curr_node = best\n",
+    "        while curr_node.parent_action is not None and curr_node.parent_node is not None:\n",
+    "            lst_action = curr_node.parent_action\n",
+    "            curr_node = curr_node.parent_node\n",
+    "            \n",
+    "        if lst_action is None:\n",
+    "            random.seed(time.time_ns())\n",
+    "            return random.choice(MOVE_ACTIONS)\n",
+    "        \n",
+    "        return lst_action               \n",
+    "    \n",
+    "    def step(self, state: Level) -> Action:\n",
+    "        self.step_limit = 5\n",
+    "        \n",
+    "        current_state = to_state(state)\n",
+    "        return self.astar(current_state)\n"
    ]
   },
   {
@@ -370,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "daf6d039",
    "metadata": {},
    "outputs": [],
@@ -427,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "810c8ea8",
    "metadata": {},
    "outputs": [],
@@ -586,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "974cee4f",
    "metadata": {},
    "outputs": [
@@ -596,8 +708,8 @@
      "text": [
       "Level(width=11,\n",
       "      height=9,\n",
-      "      move_fn=<function default_move_fn at 0xffff8c3f1ee0>,\n",
-      "      objective_fn=<function default_objective_fn at 0xffff6e90e840>,\n",
+      "      move_fn=<function default_move_fn at 0x7a2ff2a636a0>,\n",
+      "      objective_fn=<function default_objective_fn at 0x7a2ff28aa8e0>,\n",
       "      seed=42,\n",
       "      grid=[...],\n",
       "      turn=0,\n",
@@ -686,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4c67e8ee",
    "metadata": {},
    "outputs": [
@@ -694,18 +806,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "level_name: Level maze turns (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.14\n",
-      "level_name: Level optional coin (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.18\n",
-      "level_name: Level required one (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.12\n",
-      "level_name: Level required two (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.22\n",
-      "level_name: Level key door (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.13\n",
-      "level_name: Level hazard detour (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.2\n",
-      "level_name: Level portal shortcut (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.13\n",
-      "level_name: Level pushable box (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.13\n",
-      "level_name: Level enemy patrol (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.16\n",
-      "level_name: Level power shield (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.13\n",
-      "level_name: Level power ghost (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.2\n",
-      "level_name: Level power boots (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 0.18\n"
+      "level_name: Level maze turns (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 2.12\n",
+      "level_name: Level optional coin (level), performance: 0.9534883720930233, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 2.0\n",
+      "level_name: Level required one (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 6.81\n",
+      "level_name: Level required two (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 5.98\n",
+      "level_name: Level key door (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: False, error: False, runtime (sec): 22.96\n",
+      "level_name: Level hazard detour (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 8.36\n",
+      "level_name: Level portal shortcut (level), performance: 1.0, total_reward: -12.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 3.0\n",
+      "level_name: Level pushable box (level), performance: 1.0, total_reward: -21.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 6.79\n",
+      "level_name: Level enemy patrol (level), performance: 1.0, total_reward: -27.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 7.01\n",
+      "level_name: Level power shield (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: True, error: False, runtime (sec): 39.65\n",
+      "level_name: Level power ghost (level), performance: 0.0, total_reward: -150.0, win: False, lose: True, timeout: True, error: False, runtime (sec): 32.09\n",
+      "level_name: Level power boots (level), performance: 0.975609756097561, total_reward: -30.0, win: True, lose: False, timeout: False, error: False, runtime (sec): 11.69\n"
      ]
     }
    ],
