--- a/mini-project.ipynb
+++ b/mini-project.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c63a5bc8",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,6 @@
     "\n",
     "# Rendering and display\n",
     "from grid_universe.renderer.texture import TextureRenderer\n",
-    "from IPython.display import display\n",
     "from grid_universe.levels.factories import create_wall\n",
     "\n",
     "# Default renderer used throughout the notebook unless overridden in a cell\n",
@@ -332,26 +331,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a246b570",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from grid_universe.utils.ecs import entities_with_components_at\n",
-    "from grid_universe.components.properties import Position\n",
-    "from grid_universe.levels.entity_spec import EntitySpec\n",
-    "from grid_universe.levels.convert import _entity_object_from_state\n",
-    "from queue import PriorityQueue\n",
+    "# Unified imports for Grid Universe tutorial (run this cell first)\n",
     "import random, time\n",
+    "from typing import List, Tuple\n",
+    "from queue import PriorityQueue\n",
+    "from grid_universe.state import State\n",
+    "from grid_universe.actions import Action\n",
+    "from grid_universe.levels.grid import Level\n",
+    "\n",
+    "from grid_universe.components.properties import Position\n",
+    "from grid_universe.levels.convert import _entity_object_from_state\n",
+    "from grid_universe.utils.ecs import entities_with_components_at\n",
+    "# Core API\n",
+    "from grid_universe.gym_env import Observation\n",
     "\n",
     "class Node:\n",
-    "    state: State \n",
+    "    state: \"State\" \n",
     "    parent_node: \"Node | None\"\n",
-    "    parent_action: Action | None\n",
+    "    parent_action: \"Action | None\"\n",
     "    current_step: int\n",
     "   \n",
-    "    def __init__(self, state: State, parent_node: \"Node | None\", parent_action: Action | None, current_step: int):\n",
+    "    def __init__(self, state: \"State\", parent_node: \"Node | None\", parent_action: \"Action | None\", current_step: int):\n",
     "        self.current_step = current_step\n",
     "        self.state = state\n",
     "        self.parent_node = parent_node\n",
@@ -361,7 +366,7 @@
     "        return self.f() < other.f()\n",
     "        \n",
     "    def __eq__(self, value: object) -> bool:\n",
-    "        if type(value) is not Node:\n",
+    "        if not isinstance(value, Node):\n",
     "            return False\n",
     "        \n",
     "        return self.state == value.state  \n",
@@ -369,9 +374,9 @@
     "    def manhatan_dis(self, pos_1: tuple[int, int], pos_2: tuple[int, int]):\n",
     "        return abs(pos_1[0] - pos_2[0]) + abs(pos_1[1] - pos_2[1])\n",
     "    \n",
-    "    def get_cores(self) -> List[tuple[int, int]]:\n",
+    "    def get_cores(self) -> \"List[tuple[int, int]]\":\n",
     "        collectibles = self.state.collectible\n",
-    "        cores: List[tuple[int, int]] = []\n",
+    "        cores: \"List[tuple[int, int]]\" = []\n",
     "        \n",
     "        for key, item in collectibles.items():\n",
     "            entity_spec = _entity_object_from_state(self.state, key)\n",
@@ -414,7 +419,7 @@
     "        \n",
     "        return (position.x, position.y)       \n",
     "    \n",
-    "    def step(self, action: Action) -> State:\n",
+    "    def step(self, action: \"Action\") -> \"State\":\n",
     "        agent_id = next(iter(self.state.agent.keys()))\n",
     "        return step(self.state, action, agent_id)\n",
     "     \n",
@@ -424,18 +429,18 @@
     "MOVE_ACTIONS = [Action.UP, Action.DOWN, Action.LEFT, Action.RIGHT, Action.PICK_UP]\n",
     "\n",
     "class Agent:\n",
-    "    distance: dict[Node, int] = {}\n",
-    "    good_action: dict[Node, Action | None] = {}\n",
+    "    distance: \"dict[Node, int]\" = {}\n",
+    "    good_action: \"dict[Node, Action | None]\" = {}\n",
     "    step_limit: int = 0\n",
-    "    current_state: State | None = None\n",
+    "    current_state: \"State | None\" = None\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.distance: dict[Node, int] = {}\n",
-    "        self.good_action: dict[Node, Action | None] = {}\n",
+    "        self.distance: \"dict[Node, int]\" = {}\n",
+    "        self.good_action: \"dict[Node, Action | None]\" = {}\n",
     "        self.step_limit: int = 0\n",
     "        self.current_state = None\n",
     "        \n",
-    "    def get_exit_position(self, state: State) -> tuple[int, int]:\n",
+    "    def get_exit_position(self, state: \"State\") -> tuple[int, int]:\n",
     "        exit_id = next(iter(state.exit.keys()))\n",
     "        position = state.position.get(exit_id)\n",
     "        if position is not None:\n",
@@ -443,7 +448,7 @@
     "        \n",
     "        raise Exception(\"Cannot find exit position\")\n",
     "    \n",
-    "    def get_agent_position(self, state: State) -> tuple[int, int]:\n",
+    "    def get_agent_position(self, state: \"State\") -> tuple[int, int]:\n",
     "        agent_id = next(iter(state.agent.keys()))\n",
     "        position = state.position.get(agent_id)\n",
     "        if position is not None:\n",
@@ -451,17 +456,17 @@
     "        \n",
     "        raise Exception(\"Cannot find exit position\")\n",
     "        \n",
-    "    def is_end_node(self, node: Node) -> bool:\n",
+    "    def is_end_node(self, node: \"Node\") -> bool:\n",
     "        return node.get_agent_pos() == node.get_exit_position() or node.current_step >= self.step_limit\n",
     "   \n",
-    "    def astar(self, state: State):\n",
+    "    def astar(self, state: \"State\"):\n",
     "        pq: PriorityQueue[Node] = PriorityQueue()\n",
     "        vis: dict[Node, bool] = {}\n",
     "        \n",
     "        initial_node = Node(state, None, None, 0)\n",
     "        pq.put(initial_node)\n",
     "        \n",
-    "        end_nodes: List[Node] = []\n",
+    "        end_nodes: \"List[Node]\" = []\n",
     "        \n",
     "        while not pq.empty():\n",
     "            node = pq.get()\n",
@@ -490,13 +495,13 @@
     "                \n",
     "        return self.find_base_action(end_nodes)\n",
     "                \n",
-    "    def find_base_action(self, end_nodes: List[Node]) -> Action:\n",
+    "    def find_base_action(self, end_nodes: \"List[Node]\") -> \"Action\":\n",
     "        if len(end_nodes) == 0:\n",
     "            random.seed(time.time_ns())\n",
     "            return random.choice(MOVE_ACTIONS)\n",
     "    \n",
     "        best = min(end_nodes)\n",
-    "        lst_action: None | Action = None\n",
+    "        lst_action: \"Action | None\" = None\n",
     "        \n",
     "        curr_node = best\n",
     "        while curr_node.parent_action is not None and curr_node.parent_node is not None:\n",
@@ -509,22 +514,27 @@
     "        \n",
     "        return lst_action               \n",
     "    \n",
-    "    def step(self, state: Level) -> Action:\n",
-    "        self.distance: dict[Node, int] = {}\n",
-    "        self.good_action: dict[Node, Action | None] = {}\n",
-    "        self.step_limit = 5\n",
-    "        \n",
-    "        action: Action\n",
-    "        \n",
-    "        if self.current_state is None:\n",
-    "            current_state = to_state(state)\n",
-    "            action = self.astar(current_state)\n",
-    "            self.current_state = step(current_state, action)\n",
-    "        else:\n",
-    "            action = self.astar(self.current_state)\n",
-    "            self.current_state = step(self.current_state, action)\n",
+    "    def step(self, state: \"Level | Observation\") -> \"Action\":\n",
+    "        if not isinstance(state, Level):\n",
+    "            return Action.DOWN\n",
+    "        elif isinstance(state, Level):\n",
+    "            self.distance: \"dict[Node, int]\" = {}\n",
+    "            self.good_action: \"dict[Node, Action | None]\" = {}\n",
+    "            self.step_limit = 5\n",
     "            \n",
-    "        return action    \n"
+    "            action: Action\n",
+    "            \n",
+    "            if self.current_state is None:\n",
+    "                current_state = to_state(state)\n",
+    "                action = self.astar(current_state)\n",
+    "                self.current_state = step(current_state, action)\n",
+    "            else:\n",
+    "                action = self.astar(self.current_state)\n",
+    "                self.current_state = step(self.current_state, action)\n",
+    "                \n",
+    "            return action    \n",
+    "        \n",
+    "        return Action.DOWN\n"
    ]
   },
   {
