--- a/image_classification/direction_classification.ipynb
+++ b/image_classification/direction_classification.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "id": "135b5180",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "id": "35a6cf22",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
     "    model=get_model(21), prefer=\"auto\"\n",
     ", compression=\"zlib\")\n",
     "\n",
-    "with open(\"direction_model.py\", \"w\") as f:\n",
+    "with open(\"exported_models/direction_model.py\", \"w\") as f:\n",
     "    f.write(snippet)"
    ]
   },
