--- a/image_classification/image-classification.ipynb
+++ b/image_classification/image-classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "853a68de",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f7f94d68",
    "metadata": {},
    "outputs": [
@@ -658,12 +658,12 @@
    ],
    "source": [
     "model = get_model(21)\n",
-    "model.load_state_dict(torch.load(\"image-classification-stratified-80-20\", weights_only=True))"
+    "model.load_state_dict(torch.load(\"image_models/image-classification-stratified-80-20\", weights_only=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "da8be678",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
     "    model=get_model(21), prefer=\"auto\"\n",
     ", compression=\"zlib\")\n",
     "\n",
-    "with open(\"image_model.py\", \"w\") as f:\n",
+    "with open(\"exported_models/image_model.py\", \"w\") as f:\n",
     "    f.write(snippet)"
    ]
   },
